test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/sizeof_extern_client.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: large_array
        None: 
        Array: 
          TLong: 1000
          Array: 
            TLong: 2000
            Double: 
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CSizeOf: 
                    CVar: 
                      TIdentifier: large_array
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 16000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
