test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/assign_to_void_var.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: v1
        None: 
        Void: 
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CVar: 
                    TIdentifier: v1
                    None: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    Void: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
